--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<h1> This is my Beautiful Website </h1>
 	<p> Welcome to Mumbai Hello Miss India , I hope you Enjoyed my Website </p>
 	<p> :) :( :D 
-
+	<p> Featiure 1 </p>
 	</p>
 	
 
